@@ -1,8 +1,11 @@
-January 14, 2006: 
+January 17, 2006:
 
   - Fixed the -f and -d command line options.
   - Missiles are now larger and brighter than their orbit trail dots.
   - Alt+Enter now also toggles fullscreen mode.
+  - Make it work in 15 and 16 bit per pixel modes (no aaline).
+  - Possibly fix the MacOS X "invisible fix" problem I saw (use 2 x aaline
+    instead of aalines).
 
 January 14, 2006: Released version 0.9.1 with some bug fixes and small
 features:
